// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`device list chosen device list 1`] = `
<div
  class="device-list"
>
  <h4
    class="box-title"
  >
    设备列表
  </h4>
   
  <div
    class="box-content"
  >
    <p>
      全选
    </p>
     
    <p
      style="display: none;"
    >
      全不选
    </p>
     
    <div
      class="search-input"
    >
      <input
        autocomplete="off"
        placeholder="模糊搜索"
        type="text"
      />
       
      <i
        class="input-cancel icon-cancel"
        style="display: none;"
      />
    </div>
     
    <div
      class="little-bar"
    >
      <div
        class="chosen-options"
      >
        <div
          class="chosen-option"
        >
          
          a
          
          <i
            class="chosen-cancel icon-cancel"
          />
        </div>
      </div>
    </div>
     
    <div
      class="my-bar"
    >
      <ul>
        <li
          data-id="1"
          data-name="a"
        >
          <input
            id="1"
            type="checkbox"
          />
           
          <label
            for="1"
          >
            a
          </label>
        </li>
        <li
          data-id="2"
          data-name="b"
        >
          <input
            id="2"
            type="checkbox"
          />
           
          <label
            for="2"
          >
            b
          </label>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`device list init list 1`] = `
<div
  class="device-list"
>
  <h4
    class="box-title"
  >
    设备列表
  </h4>
   
  <div
    class="box-content"
  >
    <p>
      全选
    </p>
     
    <p
      style="display: none;"
    >
      全不选
    </p>
     
    <div
      class="search-input"
    >
      <input
        autocomplete="off"
        placeholder="模糊搜索"
        type="text"
      />
       
      <i
        class="input-cancel icon-cancel"
        style="display: none;"
      />
    </div>
     
    <div
      class="little-bar"
    >
      <div
        class="chosen-options"
      />
    </div>
     
    <div
      class="my-bar"
    >
      <ul>
        <li
          data-id="1"
          data-name="a"
        >
          <input
            id="1"
            type="checkbox"
          />
           
          <label
            for="1"
          >
            a
          </label>
        </li>
        <li
          data-id="2"
          data-name="b"
        >
          <input
            id="2"
            type="checkbox"
          />
           
          <label
            for="2"
          >
            b
          </label>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`device list select all 1`] = `
<div
  class="device-list"
>
  <h4
    class="box-title"
  >
    设备列表
  </h4>
   
  <div
    class="box-content"
  >
    <p
      style="display: none;"
    >
      全选
    </p>
     
    <p
      style=""
    >
      全不选
    </p>
     
    <div
      class="search-input"
    >
      <input
        autocomplete="off"
        placeholder="模糊搜索"
        type="text"
      />
       
      <i
        class="input-cancel icon-cancel"
        style="display: none;"
      />
    </div>
     
    <div
      class="little-bar"
    >
      <div
        class="chosen-options"
      >
        <div
          class="chosen-option"
        >
          
          a
          
          <i
            class="chosen-cancel icon-cancel"
          />
        </div>
        <div
          class="chosen-option"
        >
          
          b
          
          <i
            class="chosen-cancel icon-cancel"
          />
        </div>
      </div>
    </div>
     
    <div
      class="my-bar"
    >
      <ul>
        <li
          data-id="1"
          data-name="a"
        >
          <input
            id="1"
            type="checkbox"
          />
           
          <label
            for="1"
          >
            a
          </label>
        </li>
        <li
          data-id="2"
          data-name="b"
        >
          <input
            id="2"
            type="checkbox"
          />
           
          <label
            for="2"
          >
            b
          </label>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`device list select all 2`] = `
<div
  class="device-list"
>
  <h4
    class="box-title"
  >
    设备列表
  </h4>
   
  <div
    class="box-content"
  >
    <p>
      全选
    </p>
     
    <p
      style="display: none;"
    >
      全不选
    </p>
     
    <div
      class="search-input"
    >
      <input
        autocomplete="off"
        placeholder="模糊搜索"
        type="text"
      />
       
      <i
        class="input-cancel icon-cancel"
        style="display: none;"
      />
    </div>
     
    <div
      class="little-bar"
    >
      <div
        class="chosen-options"
      />
    </div>
     
    <div
      class="my-bar"
    >
      <ul>
        <li
          data-id="1"
          data-name="a"
        >
          <input
            id="1"
            type="checkbox"
          />
           
          <label
            for="1"
          >
            a
          </label>
        </li>
        <li
          data-id="2"
          data-name="b"
        >
          <input
            id="2"
            type="checkbox"
          />
           
          <label
            for="2"
          >
            b
          </label>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
